--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <!-- Product 1 -->
         <div class="col-md-4 mb-4">
           <div class="card product-card">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Produto 1">
+            <img src="./imagem/coca em lata.jpg" class="card-img-top" alt="Produto 1">
             <div class="card-body">
-              <h5 class="card-title">Produto 1</h5>
+              <h5 class="card-title">coca</h5>
               <p class="card-text">Descrição breve do produto.</p>
               <button class="btn btn-primary add-to-cart" data-product="Produto 1">Adicionar ao Carrinho</button>
             </div>
@@ -56,9 +56,9 @@
         <!-- Product 2 -->
         <div class="col-md-4 mb-4">
           <div class="card product-card">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Produto 2">
+            <img src="./imagem/kit refrigerante.jpg" class="card-img-top" alt="Produto 2">
             <div class="card-body">
-              <h5 class="card-title">Produto 2</h5>
+              <h5 class="card-title">kit2l</h5>
               <p class="card-text">Descrição breve do produto.</p>
               <button class="btn btn-primary add-to-cart" data-product="Produto 2">Adicionar ao Carrinho</button>
             </div>
@@ -67,9 +67,9 @@
         <!-- Product 3 -->
         <div class="col-md-4 mb-4">
           <div class="card product-card">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Produto 3">
+            <img src="./imagem/guaranar.png" class="card-img-top" alt="Produto 3">
             <div class="card-body">
-              <h5 class="card-title">Produto 3</h5>
+              <h5 class="card-title">Gurana</h5>
               <p class="card-text">Descrição breve do produto.</p>
               <button class="btn btn-primary add-to-cart" data-product="Produto 3">Adicionar ao Carrinho</button>
             </div>
